CAY-1781 Add StatelessContextRequestHandler as an alternative to the Session-based one
CAY-1294 Generify query
CAY-1785 SelectQuery<T> for DataRows
CAY-1803 Optimize Expression conversion to String and EJBQL 
CAY-1809 Remove 'final' modifier from Cayenne, HessianUtil, PropertyComparator, ConversionUtil, and LinkedDeque

Bug Fixes:

CAY-957 Deadlock in nested contexts
CAY-1522 EJBQL query don't support quotes
CAY-1677 Modeler: text fields discard input unless you press enter
CAY-1701 Modeler cannot undo pasting of obj (db) entity
CAY-1708 Modeler error when pasting datamap with EJBQL query
CAY-1714 ROP: Cayenne tries to build a query for non committed object when using more than 2 nested contexts 
CAY-1721 Writing blobs fails (Oracle)
CAY-1725 NullPointerException from call to removeToManyTarget
CAY-1719 Modeler - Obj Attribute Java Type editor won't focus sometimes
CAY-1727 Modeler thinks entity is using inheritance when it doesn't
CAY-1729 PersistentDescriptor must have predictable property iteration order
CAY-1738 Tutorial cayenne-rop-server should be packaged as a war
CAY-1739 Cayenne ROP server resets session on every request if BASIC auth is used
CAY-1742 ObjRelationship inspector says "ObjAttribute Inspector"
CAY-1744 Unexpected read-only relationships in vertical inheritance mapping
CAY-1749 NPE on simple nested context commit
CAY-1755 FaultFailureException resolving relationships to UNIQUE non-PK columns
CAY-1757 ROP: Faulting entity relationship resets uncommitted modifications made to its reverse relationship 
CAY-1774 EhCacheQueryCache.get(QueryMetadata, QueryCacheEntryFactory) returns null if EhCache instance for group is not present
CAY-1780 cdbimport do not create xml file in resource folder
CAY-1782 Deadlock when performing many concurrent inserts
CAY-1783 JdbcPkGenerator.longPkFromDatabase would throw an exception if the PK value exceeds a range of Java int
CAY-1794 Duplicate attributes in discriminator columns of PersistentDescriptor